Capstone_Project/k8s/ai-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ai-orchestration
  labels:
    name:  ai-orchestration
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-server
  template:
    metadata:
      labels:
        app: ai-server
    spec:
      containers:
      - image: ai-orchestration
        name:  ai-server
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "250m"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name: ai-server-port
