Capstone_Project/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace-ingress
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: router-service
    
    # Time in seconds to wait for a response from the pod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"

    # Time in seconds to wait for data to be sent to the pod
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"

    # Time in seconds to establish a connection to the pod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"

    # Makes a user stay connected to the same pod every time when there is replicas of same pod.
    nginx.ingress.kubernetes.io/affinity: "cookie"

    # Sets the cookie name to route. Browser stores:route=abc123(NGINX internally maps that value- to a pod.) and NGINX uses it to remember which pod the user should go to.
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
  labels:
    app.kubernetes.io/name: codespace-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/sandbox"
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: "/api/ai"
            backend:
              service:
                name: ai-service
                port:
                  number: 80

    - host: "*.preview.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router-service
                port:
                  number: 80

    - host: "*.agent.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: router-service
                port:
                  number: 80
